# gRPC-experiments

./: .gitignore  dashboard.py  node_status.json
grpc-hello-world/cmake/: common.cmake
grpc-hello-world/cpp_client/: CMakeLists.txt  client.cpp
grpc-hello-world/cpp_server/: CMakeLists.txt  server.cpp
grpc-hello-world/python_client/: client.py  helloworld_pb2_grpc.py
grpc-server-client/cpp_client/: CMakeLists.txt  client.cpp
grpc-server-client/cpp_server/: server.cpp
grpc-server-client/proto/: network.proto
python-dashboard-app/: dashboard.py
